KSENROLL-7724: fixed the ACAL overview gray section right align issue for both Calendar and Terms tabs
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@50519 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -853,7 +853,6 @@ div#Uif-ApplicationHeader-Wrapper{
 .ks-gray-background  {
     background-color: #ebebeb;
     border:none;
-    padding:5px 10px 5px 10px;
     width:100%;
     line-height:15px;
 }
